<resources>
    <string name="app_name">appChat</string>
    <string name="signIn">Ou crie sua conta aqui</string>
    <string name="loginHint">Email</string>
    <string name="passwordHint">Senha</string>
    <string name="enterButton">Entrar</string>
    <string name="usernameHint">Username</string>
    <string name="signinButton">Cadastrar</string>
    <string name="btnphoto">Foto</string>
    <string name="menuContacts">Contatos</string>
    <string name="menuLogout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mensagem">Mensagem</string>
    <string name="alterar">Alterar</string>
</resources>
